--- a/markdown.css
+++ b/markdown.css
@@ -113,3 +113,22 @@ code{
     white-space: pre;
     background: transparent;
 }
+
+.index-banner{
+    width: 100%;
+    height: 300px;
+}
+.index-body{
+    width: 80%;
+    max-width: 800px;
+    margin:auto;
+    padding-top:30px;
+}
+.index-body .list-item{
+    padding:0.2em 0;
+    border-bottom:1px solid #eee;
+    
+}
+.index-body .list-item a{
+    color:#606c71;
+}
