--- a/theme.css
+++ b/theme.css
@@ -132,3 +132,17 @@ code{
 .index-body .list-item a{
     color:#606c71;
 }
+.page-header img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    border: 4px solid #fff;
+    box-shadow: 0 0 8px #2f2f2f;    
+}
+.index-banner h2{
+    color:#fff;
+    margin-top:0;
+}
+.index-banner .btn{
+padding:2px 10px;
+}
